# reeln-plugin-google

./: CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
reeln_google_plugin/: __init__.py  auth.py  livestream.py  playlist.py  plugin.py  upload.py
tests/: conftest.py
tests/unit/: test_auth.py  test_init.py  test_livestream.py  test_playlist.py  test_plugin.py  test_upload.py
